# Apex

./: Apex_install.sh  Apex_update.sh  COMPTE.xlsb.xlsx  COMPTE.xlsx  README.md  Trotate  Trotate.cpp  Uninstall_depedencies.sh  depedencies.sh  installation.sh  logo_v1.CATPart  testqt.cpp  uninstallation.sh  visu.cpp
APEX_CATIA/: 3D_PCB_PCB_APEX_LE_RETOUR_V9_2025-03-28_2025-03-28.CATProduct  COMPOUND.CATPart  COMPOUND_1.CATPart  COMPOUND_10.CATPart  COMPOUND_11.CATPart  COMPOUND_12.CATPart  COMPOUND_13.CATPart  COMPOUND_14.CATPart  COMPOUND_15.CATPart  COMPOUND_16.CATPart  COMPOUND_17.CATPart  COMPOUND_19.CATPart  COMPOUND_2.CATPart  COMPOUND_20.CATPart  COMPOUND_3.CATPart  COMPOUND_4.CATPart  COMPOUND_5.CATPart  COMPOUND_6.CATPart  COMPOUND_7.CATPart  COMPOUND_8.CATPart  COMPOUND_9.CATPart  SOLID.CATPart  SOLID_1.CATPart  Wde2-BMP-SENSORM-SMD_BMP388.CATPart  Wde2-BUZZER-BUZ-SMD_L4.0-W4.0-P3.50-L.CATPart  Wde2-Board.CATPart  Wde2-C13-C0603.CATPart  Wde2-C20-C0402.CATPart  Wde2-D3-SOD-123_L2.7-W1.6-LS3.7-RD-1.CATPart  Wde2-L2-L0806.CATPart  Wde2-U4-CONN-SMD_20P-P0.80_2147210200.CATPart  Wde2-X1-CRYSTAL-SMD_L2.0-W1.2.CATPart  Wde2-X2-CRYSTAL-SMD_3P-L3.2-W1.3-P1.2-BL.CATPart
APEX_DOC/: .$APX_algo.drawio.bkp  APX_algo.drawio
ApexActual/: TelemParser.h  main.cpp
GpsMapApp/: gps.txt  main.cpp
KODE/: main3.py  reception_serial.py
KODE/APEX_NO_GPS/: .mxproject  APEX_NO_GPS.ioc  CMakeLists.txt
KODE/APEX_NO_GPS/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
KODE/APEX_NO_GPS/Core/Src/: adc.c  dma.c  gpio.c  main.c  stm32f4xx_it.c  tim.c
KODE/APEX_NO_GPS/cmake/stm32cubemx/: CMakeLists.txt
KODE/APEX_v0_1/: .mxproject  APEX_v0_1.ioc  CMakeLists.txt
KODE/APEX_v0_1/Core/Inc/: main.h  stm32f4xx_it.h
KODE/APEX_v0_1/Core/Src/: gpio.c  main.c  usart.c
KODE/APEX_v0_1/cmake/stm32cubemx/: CMakeLists.txt
KODE/APEX_v0_2/: .mxproject  APEX_v0_2.ioc  CMakeLists.txt  COM5_2025_10_22.17.09.18.358.txt  COM5_2025_10_22.17.26.00.277.txt  COM5_2025_10_22.18.53.42.242.txt  COM5_2025_10_24.09.59.11.765.txt  COM5_2025_10_24.10.19.12.505.txt  COM5_2025_10_24.10.20.09.032.txt  COM5_2025_10_24.10.20.26.233.txt  COM5_2025_10_24.10.22.45.637.txt  COM5_2025_10_24.10.22.51.836.txt  COM5_2025_10_24.10.23.08.971.txt  COM5_2025_10_24.10.23.26.917.txt  COM5_2025_10_24.10.23.57.271.txt
KODE/APEX_v0_2/Core/: _cmake_cpy.txt
KODE/APEX_v0_2/Core/Inc/: stm32f4xx_it.h
KODE/APEX_v0_2/Core/Inc/drivers/: BMI088.h  LSM303AGR.h  gps.h  led.h  rfm96w.h  usb.h  w25q_mem.h
KODE/APEX_v0_2/Core/Inc/peripherals/: i2c.h  spi.h  usart.h
KODE/APEX_v0_2/Core/Inc/utils/: circular_buffer.h  flash_stream.h  iir_filter.h  scheduler.h  telem_format.h  test.h  tools.h
KODE/APEX_v0_2/Core/Src/: main.c  stm32f4xx_it.c
KODE/APEX_v0_2/Core/Src/drivers/: ADXL375.c  BMI088.c  LSM303AGR.c  buzzer.c  gps.c  led.c  rfm96w.c  usb.c  w25q_mem.c
KODE/APEX_v0_2/Core/Src/peripherals/: adc.c  dma.c  gpio.c  i2c.c  spi.c  tim.c  usart.c
KODE/APEX_v0_2/Core/Src/utils/: circular_buffer.c  gms.c  iir_filter.c  queue.c  scheduler.c  telem_format.c  test.c  tools.c
KODE/APEX_v0_2/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
KODE/APEX_v0_2/cmake/stm32cubemx/: CMakeLists.txt
KODE/APEX_v1_0/: .gitignore  .mxproject  APEX_v1_0.ioc  CMakeLists.txt
KODE/APEX_v1_0/Core/: CMakeLists.txt
KODE/APEX_v1_0/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
KODE/APEX_v1_0/Core/Inc/drivers/: ADXL375.h  BMI088.h  LSM303AGR.h  (+3 more)
KODE/APEX_v1_0/Core/Src/: freertos.c  main.c  stm32f4xx_it.c
KODE/APEX_v1_0/Core_example/Inc/: stm32f4xx_hal_conf.h
KODE/APEX_v1_0/Core_example/Src/: dma.c  freertos.c  main.c
KODE/APEX_v1_0/cmake/stm32cubemx/: CMakeLists.txt
KODE/TEST_GPS/: .mxproject  CMakeLists.txt  TEST_GPS.ioc
KODE/TEST_GPS/Core/Inc/: main.h
KODE/TEST_GPS/Core/Src/: adc.c  gpio.c  main.c  spi.c  tim.c
KODE/TEST_GPS/cmake/stm32cubemx/: CMakeLists.txt
KODE/TEST_I2C/: .mxproject  CMakeLists.txt  TEST_I2C.ioc
KODE/TEST_I2C/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
KODE/TEST_I2C/Core/Src/: dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c
KODE/TEST_I2C/cmake/stm32cubemx/: CMakeLists.txt
KODE/TEST_LED/: .mxproject  CMakeLists.txt  TEST_LED.ioc
KODE/TEST_LED/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
KODE/TEST_LED/Core/Src/: dma.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
KODE/TEST_LED/cmake/stm32cubemx/: CMakeLists.txt
PCB/: BOM_APEX_LE_RETOUR_2025-04-02.csv  PickAndPlace_PCB_APEX_LE_RETOUR_V9_2025-04-02.csv
Station_sol/: coucou.txt  depedencies.sh  installation.sh  visu
Station_sol/ApexActual/: Grathwindow.cpp  MainWindow.cpp  MainWindow.h  TelemParser.cpp  main.cpp  qt_app.pro
Station_sol/GpsMapApp/: GpsMapApp  GpsMapApp.pro  mainwindow.cpp  mainwindow.h  map.html
Station_sol/stest/: main.cpp  main.pro
Station_sol/testmap/: mainwindow.cpp  map.html
Station_sol/testqt/: Grathwindow.h  Subwindow.cpp  Subwindow.h  Textwindow.cpp  Textwindow.h
Station_sol/testuart/: Uninstall_Udep.sh  testuart  testuart.cpp
USB_MEMORY/: test.py  usb_apex.py
rapport/: repport.aux  repport.lof  repport.out  repport.tex  repport.toc
stest/: Makefile  main
testmap/: dep.sh  gps.txt  mainwindow.h  mainwindow.pro  udep.sh
testqt/: Grathwindow.cpp  Grathwindow.h  MainWindow.cpp  MainWindow.h  Makefile  Textwindow.cpp  Textwindow.h  data.txt  main.cpp  moc_Grathwindow.cpp  moc_MainWindow.cpp  moc_Subwindow.cpp  moc_Textwindow.cpp  qt_app  qt_app.pro
testuart/: Udep.sh  testuart.cpp
(+71 files in other folders)
